no text underline for home page buttons

--- a/public/index.html
+++ b/public/index.html
@@ -77,7 +77,7 @@
         gap: 40px;
       }
 
-      .a {
+      a.button {
         font-size: 1.5rem;
         padding: 20px 40px;
         text-decoration: none;
