--- a/public/index.html
+++ b/public/index.html
@@ -49,6 +49,7 @@
       border: none;
       width: 200px;
       transition: background-color 0.3s ease;
+      text-decoration: none;
     }
 
     .button-hider {
@@ -77,7 +78,7 @@
         gap: 40px;
       }
 
-      a.button {
+      .button {
         font-size: 1.5rem;
         padding: 20px 40px;
         text-decoration: none;
