--- a/public/hider.html
+++ b/public/hider.html
@@ -3,23 +3,268 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>IKEA Hider</title>
+  <title>Ikea Hiders Upload</title>
   <style>
-    body { font-family: sans-serif; padding: 20px; }
-    img { max-width: 200px; margin: 10px; border-radius: 8px; }
-    #gallery { display: flex; flex-wrap: wrap; }
+    body {
+      background-color: #FFD700;
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 20px;
+      padding-top: 100px;
+    }
+
+    header {
+      text-align: center;
+      font-size: 26px;
+      font-weight: bold;
+      margin-bottom: 40px;
+    }
+
+    #found-button {
+      position: fixed;
+      top: 20px;
+      right: 20px;
+      background-color: #007bff;
+      color: white;
+      border: none;
+      border-radius: 8px;
+      padding: 10px 15px;
+      font-weight: bold;
+      cursor: pointer;
+      box-shadow: 2px 2px 5px rgba(0,0,0,0.2);
+    }
+
+    .category-section {
+      background-color: white;
+      border-radius: 12px;
+      padding: 20px;
+      margin-bottom: 20px;
+      box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.1);
+      border-left: 5px solid royalblue;
+    }
+
+    .category-section h3 {
+      margin-top: 0;
+    }
+
+    .upload-box {
+      border: 2px dashed royalblue;
+      padding: 10px;
+      display: inline-block;
+      border-radius: 8px;
+      margin-bottom: 10px;
+    }
+
+    .upload-box input[type="file"] {
+      border: none;
+      background: none;
+    }
+
+    .upload-preview {
+      margin-top: 10px;
+      max-width: 100px;
+      max-height: 100px;
+      border-radius: 8px;
+    }
+
+    .success-message {
+      color: green;
+      font-size: 14px;
+      margin-top: 8px;
+    }
+
+    /* Popup Styles */
+    .popup-overlay {
+      position: fixed;
+      inset: 0;
+      z-index: 999;
+      animation: fadeIn 0.3s ease-in-out;
+    }
+
+    .popup-backdrop {
+      position: fixed;
+      inset: 0;
+      background: rgba(0, 0, 0, 0.4);
+    }
+
+    .popup-container {
+      position: fixed;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      background: white;
+      padding: 30px 25px;
+      border-radius: 16px;
+      box-shadow: 0 12px 25px rgba(0, 0, 0, 0.2);
+      width: 300px;
+      text-align: center;
+      font-family: Arial, sans-serif;
+      z-index: 1000;
+    }
+
+    .popup-container h2 {
+      margin-top: 0;
+      margin-bottom: 20px;
+    }
+
+    .popup-container p {
+      margin-bottom: 10px;
+      font-size: 14px;
+      color: #555;
+    }
+
+    .popup-container input[type="text"] {
+      width: 80%;
+      padding: 10px;
+      border: 1px solid #ccc;
+      border-radius: 8px;
+      margin-bottom: 15px;
+      font-size: 14px;
+    }
+
+    .popup-buttons button {
+      padding: 10px 18px;
+      border: none;
+      border-radius: 8px;
+      font-weight: bold;
+      cursor: pointer;
+      margin-right: 10px;
+    }
+
+    #submit-name {
+      background-color: #007bff;
+      color: white;
+    }
+
+    #close-popup {
+      background-color: #ccc;
+      color: black;
+    }
+
+    @keyframes fadeIn {
+      from { opacity: 0; }
+      to { opacity: 1; }
+    }
+
   </style>
 </head>
 <body>
-  <h1>Upload an Image for the Scavenger Hunt</h1>
-  <input type="file" id="image" name="image" accept="image/*" required />
 
-  <h2>Gallery (Live)</h2>
-  <div id="gallery"></div>
+  <button id="found-button">I've been found!</button>
+
+  <header>Welcome Ikea Hiders, upload pictures of your items here!</header>
+
+  <form id="uploadForm">
+    <!-- Repeatable category block -->
+    <div class="category-section" data-category="red">
+      <h3>Something red</h3>
+      <div class="upload-box">
+        <input type="file" name="red" accept="image/*" />
+      </div>
+      <img class="upload-preview" />
+      <div class="success-message"></div>
+    </div>
+
+    <div class="category-section" data-category="leaf">
+      <h3>A leaf</h3>
+      <div class="upload-box">
+        <input type="file" name="leaf" accept="image/*" />
+      </div>
+      <img class="upload-preview" />
+      <div class="success-message"></div>
+    </div>
+
+    <div class="category-section" data-category="circle">
+      <h3>A circle</h3>
+      <div class="upload-box">
+        <input type="file" name="circle" accept="image/*" />
+      </div>
+      <img class="upload-preview" />
+      <div class="success-message"></div>
+    </div>
+
+    <div class="category-section" data-category="toy">
+      <h3>A toy</h3>
+      <div class="upload-box">
+        <input type="file" name="toy" accept="image/*" />
+      </div>
+      <img class="upload-preview" />
+      <div class="success-message"></div>
+    </div>
+
+    <div class="category-section" data-category="reflection">
+      <h3>A reflection</h3>
+      <div class="upload-box">
+        <input type="file" name="reflection" accept="image/*" />
+      </div>
+      <img class="upload-preview" />
+      <div class="success-message"></div>
+    </div>
+
+    <div class="category-section" data-category="soft">
+      <h3>Something soft</h3>
+      <div class="upload-box">
+        <input type="file" name="soft" accept="image/*" />
+      </div>
+      <img class="upload-preview" />
+      <div class="success-message"></div>
+    </div>
+
+    <div class="category-section" data-category="triangle">
+      <h3>A triangle</h3>
+      <div class="upload-box">
+        <input type="file" name="triangle" accept="image/*" />
+      </div>
+      <img class="upload-preview" />
+      <div class="success-message"></div>
+    </div>
+
+    <div class="category-section" data-category="old">
+      <h3>Something old</h3>
+      <div class="upload-box">
+        <input type="file" name="old" accept="image/*" />
+      </div>
+      <img class="upload-preview" />
+      <div class="success-message"></div>
+    </div>
+
+    <div class="category-section" data-category="funny">
+      <h3>Something funny</h3>
+      <div class="upload-box">
+        <input type="file" name="funny" accept="image/*" />
+      </div>
+      <img class="upload-preview" />
+      <div class="success-message"></div>
+    </div>
+
+    <div class="category-section" data-category="tall">
+      <h3>Something tall</h3>
+      <div class="upload-box">
+        <input type="file" name="tall" accept="image/*" />
+      </div>
+      <img class="upload-preview" />
+      <div class="success-message"></div>
+    </div>
+  </form>
+
+    <!-- Found Popup -->
+    <div id="found-popup" class="popup-overlay" style="display: none;">
+      <div class="popup-backdrop"></div>
+
+      <div class="popup-container">
+        <h2>You've been found!</h2>
+        <p>Enter your name to get credit:</p>
+        <input type="text" id="finder-name" placeholder="Your name" />
+        <div class="popup-buttons">
+          <button id="submit-name">Submit</button>
+          <button id="close-popup">Cancel</button>
+        </div>
+      </div>
+    </div>
 
   <!-- Firebase SDKs -->
-  <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-firestore-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/10.8.0/firebase-app-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/10.8.0/firebase-firestore-compat.js"></script>
 
   <script>
       // Your web app's Firebase configuration
@@ -35,57 +280,119 @@
         measurementId: "G-PT9XTPCF1H"
       };
 
-    // Initialize Firebase
-    firebase.initializeApp(firebaseConfig);
-    const db = firebase.firestore();
+      
+  firebase.initializeApp(firebaseConfig);
+  const db = firebase.firestore();
 
-    const imageInput = document.getElementById('image');
-    imageInput.addEventListener('change', async () => {
-      const file = imageInput.files[0];
-      if (!file) return;
+  const foundButton = document.getElementById('found-button');
+  const popup = document.getElementById('found-popup');
+  const submitBtn = document.getElementById('submit-name');
+  const closeBtn = document.getElementById('close-popup');
+  const nameInput = document.getElementById('finder-name');
 
-      const formData = new FormData();
-      formData.append('image', file);
+  foundButton.addEventListener('click', () => {
+    popup.style.display = 'block';
+    nameInput.value = '';
+  });
 
-      try {
-        const response = await fetch('/upload', { method: 'POST', body: formData });
-        const data = await response.json();
+  closeBtn.addEventListener('click', () => {
+    popup.style.display = 'none';
+  });
 
-        if (data.imageUrl) {
-          await db.collection("images").add({
-            imageUrl: data.imageUrl,
-            finder: "Anonymous",
-            found: true,
-            approved: false
-          });
+  submitBtn.addEventListener('click', async () => {
+    const name = nameInput.value.trim();
+    if (!name) return alert("Please enter a name.");
 
-          imageInput.value = ''; // reset file input
-        } else {
-          alert('Image upload failed');
-        }
-      } catch (err) {
-        console.error('Upload error:', err);
-        alert('Upload failed');
+    try {
+      // Check if name exists
+      const querySnapshot = await db.collection('hiders').where('name', '==', name).get();
+
+      if (querySnapshot.empty) {
+        await db.collection('hiders').add({ name });
+      } else {
+        alert(`${name}, you have already been found, please return to home base.`);
       }
-    });
-
-    // Display one image in the gallery
-    function appendImage(url) {
-      const img = document.createElement('img');
-      img.src = url;
-      document.getElementById('gallery').appendChild(img);
+    } catch (err) {
+      console.error(err);
+      alert("Something went wrong. Try again.");
     }
 
-    // 🔄 Real-time Firestore listener
-    db.collection("images")
-      .where("approved", "==", false)
-      .onSnapshot(snapshot => {
-        document.getElementById('gallery').innerHTML = '';
-        snapshot.forEach(doc => {
-          const data = doc.data();
-          appendImage(data.imageUrl);
+    popup.style.display = 'none';
+  });
+
+  // 🔁 Handle all file inputs
+  document.querySelectorAll('input[type="file"]').forEach(input => {
+    input.addEventListener('change', async (e) => {
+      const file = e.target.files[0];
+      const section = e.target.closest('.category-section');
+      const preview = section.querySelector('.upload-preview');
+      const successMsg = section.querySelector('.success-message');
+      const category = section.getAttribute('data-category');
+
+      if (!file) return;
+
+      // Preview image
+      const reader = new FileReader();
+      reader.onload = () => {
+        preview.src = reader.result;
+      };
+      reader.readAsDataURL(file);
+
+      // Upload to your Node.js server
+      const formData = new FormData();
+      formData.append('image', file);
+      formData.append('category', category);
+
+      try {
+        const response = await fetch('/upload', {
+          method: 'POST',
+          body: formData,
         });
-      });
+
+        const data = await response.json();
+        if (!response.ok) throw new Error(data.error || 'Upload failed');
+
+        const imageUrl = data.imageUrl;
+
+        // Store metadata in Firestore
+        await db.collection('images').add({
+          imageUrl: imageUrl,
+          category: category,
+          found: false,
+          approved: false,
+        });
+
+        successMsg.innerText = "Uploaded & saved!";
+      } catch (err) {
+        console.error(err);
+        successMsg.innerText = "Upload failed.";
+        successMsg.style.color = 'red';
+      }
+    });
+  });
+
+  function updateCategoryImage(doc) {
+    const data = doc.data();
+    const { imageUrl, category } = data;
+
+    // Find the matching section
+    const section = document.querySelector(`.category-section[data-category="${category}"]`);
+    if (section) {
+      const preview = section.querySelector('.upload-preview');
+      const msg = section.querySelector('.success-message');
+      preview.src = imageUrl;
+      msg.innerText = "Approved!";
+    }
+  }
+
+  // Real-time listener
+  db.collection('images').where('approved', '==', true).onSnapshot(snapshot => {
+    snapshot.docChanges().forEach(change => {
+      if (change.type === "added" || change.type === "modified") {
+        updateCategoryImage(change.doc);
+      }
+    });
+  });
   </script>
 </body>
 </html>
