--- a/public/hider.html
+++ b/public/hider.html
@@ -159,7 +159,7 @@
     <div class="category-section" data-category="red">
       <h3>Something red</h3>
       <div class="upload-box">
-        <input type="file" name="red" accept="image/*" />
+        <input type="file" name="red" accept="image/*" capture="camera" />
       </div>
       <img class="upload-preview" />
       <div class="success-message"></div>
@@ -168,7 +168,7 @@
     <div class="category-section" data-category="leaf">
       <h3>A leaf</h3>
       <div class="upload-box">
-        <input type="file" name="leaf" accept="image/*" />
+        <input type="file" name="red" accept="image/*" capture="camera" />
       </div>
       <img class="upload-preview" />
       <div class="success-message"></div>
@@ -177,7 +177,7 @@
     <div class="category-section" data-category="circle">
       <h3>A circle</h3>
       <div class="upload-box">
-        <input type="file" name="circle" accept="image/*" />
+        <input type="file" name="red" accept="image/*" capture="camera" />
       </div>
       <img class="upload-preview" />
       <div class="success-message"></div>
@@ -186,7 +186,7 @@
     <div class="category-section" data-category="toy">
       <h3>A toy</h3>
       <div class="upload-box">
-        <input type="file" name="toy" accept="image/*" />
+        <input type="file" name="red" accept="image/*" capture="camera" />
       </div>
       <img class="upload-preview" />
       <div class="success-message"></div>
@@ -195,7 +195,7 @@
     <div class="category-section" data-category="reflection">
       <h3>A reflection</h3>
       <div class="upload-box">
-        <input type="file" name="reflection" accept="image/*" />
+        <input type="file" name="red" accept="image/*" capture="camera" />
       </div>
       <img class="upload-preview" />
       <div class="success-message"></div>
@@ -204,7 +204,7 @@
     <div class="category-section" data-category="soft">
       <h3>Something soft</h3>
       <div class="upload-box">
-        <input type="file" name="soft" accept="image/*" />
+        <input type="file" name="red" accept="image/*" capture="camera" />
       </div>
       <img class="upload-preview" />
       <div class="success-message"></div>
@@ -213,7 +213,7 @@
     <div class="category-section" data-category="triangle">
       <h3>A triangle</h3>
       <div class="upload-box">
-        <input type="file" name="triangle" accept="image/*" />
+        <input type="file" name="red" accept="image/*" capture="camera" />
       </div>
       <img class="upload-preview" />
       <div class="success-message"></div>
@@ -222,7 +222,7 @@
     <div class="category-section" data-category="old">
       <h3>Something old</h3>
       <div class="upload-box">
-        <input type="file" name="old" accept="image/*" />
+        <input type="file" name="red" accept="image/*" capture="camera" />
       </div>
       <img class="upload-preview" />
       <div class="success-message"></div>
@@ -231,7 +231,7 @@
     <div class="category-section" data-category="funny">
       <h3>Something funny</h3>
       <div class="upload-box">
-        <input type="file" name="funny" accept="image/*" />
+        <input type="file" name="red" accept="image/*" capture="camera" />
       </div>
       <img class="upload-preview" />
       <div class="success-message"></div>
@@ -240,7 +240,7 @@
     <div class="category-section" data-category="tall">
       <h3>Something tall</h3>
       <div class="upload-box">
-        <input type="file" name="tall" accept="image/*" />
+        <input type="file" name="red" accept="image/*" capture="camera" />
       </div>
       <img class="upload-preview" />
       <div class="success-message"></div>
