player number placeholder

--- a/public/hider.html
+++ b/public/hider.html
@@ -281,7 +281,7 @@
       <div class="popup-container">
         <h2>You've been found!</h2>
         <p>Please enter your player number:</p>
-        <input type="text" id="finder-name" placeholder="Your name" />
+        <input type="text" id="finder-name" placeholder="Your player number" />
         <div class="popup-buttons">
           <button id="submit-name">Submit</button>
           <button id="close-popup">Cancel</button>
