help button for android

--- a/public/hider.html
+++ b/public/hider.html
@@ -517,17 +517,17 @@
     function openSMS() {
       const phoneNumber = "+19253362076";
       const message = "I need help!";
-      const smsUrl = `sms:${phoneNumber}&body=${encodeURIComponent(message)}`;
+      const smsUrl = `sms:${phoneNumber}?body=${encodeURIComponent(message)}`;
 
       // iPhone-compatible fallback
       if (/iPhone|iPad|iPod/i.test(navigator.userAgent)) {
-        window.location.href = `sms:${phoneNumber};?&body=${encodeURIComponent(message)}`;
+        window.location.href = `sms:${phoneNumber};?body=${encodeURIComponent(message)}`;
       } else {
+        // Android or other platforms
         window.location.href = smsUrl;
       }
-      // window.location.href = `sms:${phoneNumber}?body=${encodeURIComponent(message)}`;
     }
-
+    
   </script>
 </body>
 </html>
