--- a/public/hider.html
+++ b/public/hider.html
@@ -138,6 +138,12 @@
       font-size: 14px;
     }
 
+    .popup-buttons {
+      display: flex;
+      justify-content: space-evenly;
+      align-items: center;
+    }
+
     .popup-buttons button {
       padding: 10px 18px;
       border: none;
@@ -150,6 +156,10 @@
     #submit-name {
       background-color: #007bff;
       color: white;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 8px;
     }
 
     #close-popup {
@@ -170,6 +180,25 @@
       border-radius: 8px;
       font-weight: bold;
       cursor: pointer;
+    }
+
+    .spinner {
+      width: 16px;
+      height: 16px;
+      margin-left: 8px;
+      border: 2px solid transparent;
+      border-top: 2px solid #ffffff;
+      border-right: 2px solid #ffffff;
+      border-radius: 50%;
+      animation: spin 0.6s linear infinite;
+      vertical-align: middle;
+      display: inline-block;
+      box-sizing: border-box;
+    }
+
+    @keyframes spin {
+      0% { transform: rotate(0deg); }
+      100% { transform: rotate(360deg); }
     }
 
   </style>
@@ -283,7 +312,7 @@
         <p>Please enter your player number:</p>
         <input type="text" id="finder-name" placeholder="Your player number" />
         <div class="popup-buttons">
-          <button id="submit-name">Submit</button>
+          <button id="submit-name">Submit <span id="loader" class="spinner" style="display: none;"></span> </button>
           <button id="close-popup">Cancel</button>
         </div>
       </div>
@@ -340,7 +369,10 @@
     const name = nameInput.value.trim();
     if (!name) return alert("Please enter your player number.");
 
+    // Show loader and disable button
+    const loader = document.getElementById('loader');
     submitBtn.disabled = true;
+    loader.style.display = 'inline';
 
     try {
       const hiderRef = db.collection('hiders').doc(name);
@@ -371,9 +403,13 @@
       window.location.href = "/endgame.html";
 
     } catch (err) {
-      console.error(err);
-      alert("Something went wrong. Please try again.");
-      submitBtn.disabled = false;
+        console.error(err);
+        alert("Something went wrong. Please try again.");
+        submitBtn.disabled = false;
+    } finally {
+        // Re-enable button and hide loader (only if not redirected)
+        submitBtn.disabled = false;
+        loader.style.display = 'none';
     }
   });
 
